# rsomics-phydiv

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: expected_False_0.5.tsv  expected_False_True.tsv  expected_None_False.tsv  expected_True_0.25.tsv  expected_True_True.tsv  table.tsv  tree.nwk
