[package]
name = "rsomics-phydiv"
version = "0.1.2"
description = "Generalized phylogenetic alpha-diversity (rooted/unrooted, abundance-weighted PD) from a feature count table + a Newick tree — scikit-bio phydiv equivalent, value-exact"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-phydiv"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-phydiv"
path = "src/main.rs"

[lib]
name = "rsomics_phydiv"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-phylo-tree = { version = "0.1" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
